--- a/client/package.json
+++ b/client/package.json
@@ -9,16 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.3"
+    "@next/font": "^14.2.15",
+    "antd": "^5.23.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "sass": "^1.83.4"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@babel/plugin-transform-private-property-in-object": "^7.25.9",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^14.2.3",
+    "next": "^15.1.4",
+    "typescript": "^5"
   }
 }
