--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -1,3 +1,6 @@
 {
-  "extends": ["@babel/plugin-transform-private-property-in-object", "next/core-web-vitals"]
+  "extends": ["next/core-web-vitals"],
+  "rules": {
+    // Add your custom rules here
+  }
 }
