--- a/client/package.json
+++ b/client/package.json
@@ -9,20 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/font": "^14.2.15",
-    "antd": "^5.23.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "sass": "^1.83.4"
+    "@ant-design/icons": "^5.5.2",
+    "@next/font": "14.2.15",
+    "antd": "5.23.1",
+    "axios": "^1.7.9",
+    "chart.js": "^4.4.7",
+    "next": "14.2.5",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
+    "react-dom": "^18.2.0",
+    "sass": "1.83.4"
   },
   "devDependencies": {
     "@babel/plugin-transform-private-property-in-object": "^7.25.9",
-    "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/chart.js": "^2.9.41",
+    "@types/node": "20",
+    "@types/react": "18",
     "@types/react-dom": "^18",
-    "eslint": "^8.57.1",
-    "eslint-config-next": "^14.2.3",
-    "next": "^15.1.4",
-    "typescript": "^5"
+    "eslint": "8.57.1",
+    "eslint-config-next": "14.2.3",
+    "typescript": "5"
   }
 }
